Address PR review: add @lucene.experimental, use Math.clamp, move CHANGES entry to 10.5
- Add @lucene.experimental tag to BayesianScoreQuery, LogOddsConjunctionQuery,
  and LogOddsConjunctionScorer Javadoc
- Replace Math.max/Math.min with Math.clamp in clampProbability
- Move CHANGES.txt entry from 11.0.0 to 10.5.0